Fix: prevent datatable style that puts scrollbar at top from leaking to other components

--- a/src/app/search/search-result/search-result.component.css
+++ b/src/app/search/search-result/search-result.component.css
@@ -68,19 +68,18 @@ app-search-result {
     border-radius: 10px;
 }
 
-::ng-deep .ngx-datatable.scroll-horz .datatable-body {
+::ng-deep #search-results.ngx-datatable.scroll-horz .datatable-body {
     transform: rotateX(180deg);
     -ms-transform: rotateX(180deg);
     -webkit-transform: rotateX(180deg);
 }
 
-::ng-deep .ngx-datatable .datatable-body .datatable-scroll {
+::ng-deep #search-results.ngx-datatable .datatable-body .datatable-scroll {
     transform: rotateX(180deg);
     -ms-transform: rotateX(180deg);
     -webkit-transform: rotateX(180deg);
 }
 
-::ng-deep .ngx-datatable.bootstrap .datatable-body .empty-row {
+::ng-deep #search-results.ngx-datatable.bootstrap .datatable-body .empty-row {
     transform: rotateX(180deg);
 }
-
